# jaccpot

./: .pre-commit-config.yaml  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OCTREE_JACCPOT_STATUS_2026-03-15.md  PROJECT_PLAN.md  README.md  SECURITY.md  __init__.py  pyproject.toml  solver.py
.github/workflows/: ci.yml
bench/: __init__.py  bench_fmm.py  bench_fused_eval_vs_jaxfmm.py  bench_jaxfmm_paper_compare.py  bench_parallel_paths.py  bench_real_vs_complex.py  bench_upward_sweep.py  ci_benchmark_guard.py  guard_large_n_radix_fast_lane.py  nearfield_leafpair_microbench.py  profile_downward_breakdown.py  profile_fused_gpu_util.py  profile_fused_stage_ablation.py  profile_refresh_stage_breakdown.py  real_vs_complex_gpu_plan.md
bench/differentiability/: autodiff_overhead.py  grad_bench_lib.py  grad_correctness.py
bench/multigpu/: comm_overhead.py  harness.py  load_balance.py  strong_scaling.py  weak_scaling.py
bench/payoff/: energy_conservation.py  parameter_recovery_demo.py
bench/scaling/: README.md  gpu_vs_cpu_speedup.py  interaction_counts.py  stage_breakdown.py  wallclock.py
bench/validation/: README.md  error_vs_theta.py  force_error_vs_order.py  mac_comparison.py
benchmarks/n_ladder_production/: README.md  n_ladder_production_latest.csv  n_ladder_production_recommendations.json  n_ladder_production_recommendations.md
docs/: adaptive_traversal_design.md  derivatives_and_jerk.md  fmm_fused_perstep_profiling_2026-07-08.md  fmm_fused_perstep_profiling_h100.json  fmm_pipeline_fusion_plan.md  h100_fastlane_launchbound_2026-07-10.md  h200_large_n_followup_plan_2026-03-23.md  large_n_gpu_memory_handoff_2026-03-13.md  large_n_runtime_contract_2026-04-21.md  large_n_runtime_status_2026-03-23.md  multigpu_differentiability_model.md  nearfield_structural_comparison_2026-04-15.md  nearfield_tonb_runbook.md  north_star_phase3_scale_plan.md  octree_fmm_task_list.md  phase5_m2l_a100_findings_and_padding_plan.md  phase5_multigpu_pallas_foldin_plan.md  phase5_pallas_plan.md  pytest_cleanup_handoff_2026-04-22.md  radix_default_simplification_plan_2026-04-21.md  radix_fast_lane_implementation_checklist_2026-04-16.md  radix_fast_lane_refactor_plan_2026-04-16.md  runtime_traversal_comparison_2026-03-20.md  small_gpu_large_n_followup_2026-03-25.md  treecode_mac_stability.md
downward/: __init__.py  local_expansions.py
examples/: README.md  adaptive_vs_fixed_benchmark.ipynb  analytic_source_motion_jerk_demo.ipynb  benchmark_gpu_n_ladder_production.ipynb  benchmark_gpu_n_ladder_production.py  benchmark_gpu_radix_runtime.ipynb  benchmark_gpu_radix_worker.py  benchmark_gpu_single_n_memory.ipynb  benchmark_grouped_modes.py  benchmark_memory_pipeline.py  benchmark_runtime_accuracy.ipynb  benchmark_runtime_accuracy_copy.ipynb  benchmark_runtime_accuracy_new.ipynb  benchmark_runtime_breakdown_h200.ipynb  benchmark_runtime_large_N.ipynb  benchmark_runtime_large_N_accuracy.ipynb  benchmark_runtime_large_N_performance.ipynb  benchmark_runtime_rtx2080_focused.ipynb  benchmark_utils.py  compare_yggdrax_jaccpot_prepare.py  jerk_modes_demo.ipynb  pallas_m2l_speed.py  profile_prepare_memory_split.py  profile_prepare_residuals.py  profile_prepare_stages.py  real_sh_adaptive_order.ipynb  real_sh_adaptive_order.py  real_sh_rot_scale_demo.py  reuse_topology_demo.py  run_in_odisseo_with_autocvd.py  time_derivatives_accuracy_demo.ipynb  time_derivatives_demo.ipynb
examples/jaccpot_paper/: fig_autodiff_overhead.ipynb  fig_comm_overhead.ipynb  fig_energy_conservation.ipynb  fig_error_vs_theta.ipynb  fig_force_error_vs_order.ipynb  fig_gpu_vs_cpu_speedup.ipynb  fig_grad_correctness.ipynb  fig_interaction_counts.ipynb  fig_load_balance.ipynb  fig_mac_comparison.ipynb  fig_payoff_convergence.ipynb  fig_scaling_wallclock.ipynb  fig_stage_breakdown.ipynb  fig_strong_scaling.ipynb  fig_weak_scaling.ipynb
jaccpot/: __init__.py  _typecheck.py  autodiff.py  config.py  odisseo.py  solver.py
jaccpot/basis/: __init__.py  base.py  complex_sh.py  real_sh.py
jaccpot/distributed/: __init__.py  cap_presets.py  fmm.py
jaccpot/downward/: __init__.py  local_expansions.py
jaccpot/experimental/: __init__.py  octree_fmm_uvwx.py  octree_uvwx.py  treecode_far_near.py  treecode_walk.py
jaccpot/nearfield/: __init__.py  near_field.py
jaccpot/operators/: __init__.py  complex_harmonics.py  complex_ops.py  dtypes.py  m2l_real_rot_scale.py  multipole_utils.py  real_harmonics.py  solidfmm_reference.py  spherical_harmonics.py  symmetric_tensors.py
jaccpot/pallas/: __init__.py  m2l_complex_fused.py  m2l_core_z_real.py  m2l_real_fused.py  nearfield_fused_leaf.py  (+3 more)
nearfield/: __init__.py  near_field.py
operators/: complex_harmonics.py  complex_ops.py  dtypes.py  real_harmonics.py  spherical_harmonics.py
runtime/: __init__.py  _fmm_impl.py  dense_interactions.py  dtypes.py  fmm.py  fmm_presets.py  grouped_interactions.py  reference.py  tree.py  tree_interactions.py
tests/: conftest.py  slow_tests.txt  test_adaptive_order_runtime.py  test_adaptive_policy_runtime.py  test_device_only_default.py  test_distributed_fmm_assembly.py  test_distributed_fmm_driver.py  test_distributed_fmm_shardmap.py  test_distributed_m2l_mechanism.py  test_distributed_p2p_halo.py  test_distributed_shardmap_local.py  test_distributed_solidfmm_far_shardmap.py  test_fastlane_geometric_centers.py  test_force_scale_runtime.py  test_gravity_vs_direct.py  test_m2l_complex_fused_pallas.py  test_p2p_shard_map.py  test_real_basis_runtime.py  test_real_sh_roundtrip.py  test_real_upward_sweep.py
upward/: solidfmm_complex_tree_expansions.py  spherical_tree_expansions.py  tree_expansions.py
(+119 files in other folders)
