[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaccpot"
version = "0.0.1"
description = "JAX Fast Multipole Method solver package built on yggdrax tree artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AstroAI Lab", email = "astroai@iwr.uni-heidelberg.de" },
  { name = "Tobias Buck", email = "tobias.buck@iwr.uni-heidelberg.de" },
]
maintainers = [{ name = "AstroAI Lab", email = "astroai@iwr.uni-heidelberg.de" }]
keywords = ["fmm", "n-body", "jax", "gravity", "treecode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.4.0",
  "jaxlib>=0.4.0",
  "jaxtyping>=0.2.23",
  "beartype>=0.14.0",
  "yggdrax>=0.0.1,<0.1.0",
]

[project.urls]
Homepage = "https://github.com/AstroAI-Lab/jaccpot"
Repository = "https://github.com/AstroAI-Lab/jaccpot"
Issues = "https://github.com/AstroAI-Lab/jaccpot/issues"
Documentation = "https://github.com/AstroAI-Lab/jaccpot#readme"

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "isort>=5.13.2",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.8.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaccpot*"]

[tool.setuptools.package-data]
jaccpot = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
exclude = '''
/(
  \.git
 |\.venv
 |build
 |dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
addopts = "-q --strict-markers --ignore=tests/perf --cov=jaccpot --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["jaccpot"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
