[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaccpot"
version = "0.0.1"
description = "JAX Fast Multipole Method solver package built on yggdrax tree artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AstroAI Lab", email = "astroai@iwr.uni-heidelberg.de" },
  { name = "Tobias Buck", email = "tobias.buck@iwr.uni-heidelberg.de" },
]
maintainers = [{ name = "AstroAI Lab", email = "astroai@iwr.uni-heidelberg.de" }]
keywords = ["fmm", "n-body", "jax", "gravity", "treecode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax[cuda]>=0.8.0",
  "jaxlib>=0.4.0",
  "jaxtyping>=0.2.23",
  "beartype>=0.14.0",
  "yggdrax>=0.0.1,<0.1.0",
]

[project.urls]
Homepage = "https://github.com/AstroAI-Lab/jaccpot"
Repository = "https://github.com/AstroAI-Lab/jaccpot"
Issues = "https://github.com/AstroAI-Lab/jaccpot/issues"
Documentation = "https://github.com/AstroAI-Lab/jaccpot#readme"

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  # Pinned to match .pre-commit-config.yaml. isort 7.0.0/8.0.1 regressed the
  # black profile (force-wraps single-name imports); 9.0.0b1 fixes it. A
  # floating ">=" here lets CI's `isort --check-only .` resolve to the broken
  # 8.0.1 and disagree with pre-commit, so keep this equal to the hook rev.
  "isort==9.0.0b1",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.0",
  "pre-commit>=3.8.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jaccpot*"]

[tool.setuptools.package-data]
jaccpot = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
exclude = '''
/(
  \.git
 |\.venv
 |build
 |dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
markers = [
    "slow: long-running / compile-heavy test (deselect with -m 'not slow')",
    "experimental: exercises experimental, non-production FMM code (octree/treecode prototypes); deselected by default, run explicitly with -m experimental",
]
# `-n auto` runs the (compilation-bound) JAX test suite across all logical cores
# via pytest-xdist. On a 72-core host this cuts wall-clock from ~25 min to ~2 min;
# a fixed `-n 32` measured marginally faster there. Override with `-n 0` to run
# serially (e.g. for pdb/`-x` debugging, which xdist does not support).
# `-m "not experimental"` keeps the everyday run on the production (radix real
# fast-lane) paths; the long-compile octree/treecode prototypes are opt-in via
# `pytest -m experimental`.
addopts = "-q --strict-markers --ignore=tests/perf -n auto -m \"not experimental\""

[tool.coverage.run]
source = ["jaccpot"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
